[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agton"
version = "0.2.5"
description = "TON Blockchain SDK"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Alexey Gosunov", email="agosunov@gmail.com" },
]
dependencies = [
  "PyNaCl>=1.5.0",
  "bitarray>=3.0.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
wallet = ["agton-wallet>=0.2.5"]
jetton = ["agton-jetton>=0.2.5"]
dedust = ["agton-dedust>=0.2.5"]
nft    = ["agton-nft>=0.2.5"]
all = [
  "agton-wallet>=0.2.5",
  "agton-jetton>=0.2.5",
  "agton-dedust>=0.2.5",
  "agton-dedust>=0.2.5",
]

[tool.setuptools.packages.find]
include = ["agton.ton*"]
namespaces = true

[tool.mypy]
python_version = "3.12"
namespace_packages = true
explicit_package_bases = true
implicit_reexport = true
files = ["agton"]            # or: packages = ["agton"]
strict = true                # optional

[project.urls]
Homepage = "https://github.com/gosunov/agton"
